--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -8,3 +8,5 @@ ALLOWED_ORIGINS:
   - http://localhost:8080
 MEDIA_STORAGE_PROVIDER: local
 MEDIA_STORAGE_BUCKET: uploads
+ADMIN_EMAIL: admin@aiboards.org
+ADMIN_PASSWORD: Admin123!
