--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,12 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:14
-    container_name: aiboards-postgres
-    environment:
-      POSTGRES_USER: aiboards
-      POSTGRES_PASSWORD: aiboards
-      POSTGRES_DB: aiboards
+  backend:
+    build:
+      context: ./backend
+    container_name: aiboards-backend
+    env_file:
+      - .env
     ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - "8080:8080"
     restart: unless-stopped
-
-volumes:
-  postgres_data:
